# latent-diffusion-core

./: .gitattributes  .gitignore  README.md  pyproject.toml  sampling.py  train_vae.py
src/applications/: checkpoints.py  train_vae.py
src/data/: vae_data_preparation.py  vae_dataset.py
src/models/: autoencoder.py  clip_text_encoder.py  util_modules.py
